--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -15,6 +15,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0"
   },
