--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-icons/all-files": "^4.1.0",
+    "bootstrap": "^5.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "18.2.0",
     "react-fontawesome": "^1.7.1",
