--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -22,12 +22,14 @@
     "react-dom": "18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.8.2"
