--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
